{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 78,
  "lineage": "347b631a-0175-ab65-1d49-65a759d86135",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-5789672a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-5789672a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-6509b80e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-6509b80e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "aws_default_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:vpc/vpc-c677fead",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-842255ef",
            "default_route_table_id": "rtb-992879f2",
            "default_security_group_id": "sg-578bdd22",
            "dhcp_options_id": "dopt-6046240b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-c677fead",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-992879f2",
            "owner_id": "366187108546",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m5_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6a6b0e75b2b6ce7",
            "arn": "arn:aws:ec2:us-east-2:366187108546:instance/i-024fe66e539039fb1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024fe66e539039fb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "braibboard",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5eed983445a933c",
            "private_dns": "ip-172-31-10-117.us-east-2.compute.internal",
            "private_ip": "172.31.10.117",
            "public_dns": "ec2-3-138-117-206.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.117.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff87899eb6282568",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220430215807100900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6509b80e",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e958664b777164"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "r5_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6a6b0e75b2b6ce7",
            "arn": "arn:aws:ec2:us-east-2:366187108546:instance/i-0d328de7059193f36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d328de7059193f36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.large",
            "ipv6_address_count": 0,
            "key_name": "braibboard",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8fd786bb85fb712",
            "private_dns": "ip-172-31-3-205.us-east-2.compute.internal",
            "private_ip": "172.31.3.205",
            "public_dns": "ec2-18-117-74-133.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.74.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0791780659cf5f8b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220430215807100900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6509b80e",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e958664b777164"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc",
            "arn_suffix": "app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220430230012214800000002-1250252381.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220430230012214800000002",
            "security_groups": [
              "sg-077e958664b777164"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5789672a"
              },
              {
                "subnet_id": "subnet-6509b80e"
              }
            ],
            "subnets": [
              "subnet-5789672a",
              "subnet-6509b80e"
            ],
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "vpc_id": "vpc-c677fead",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_12",
            "aws_default_subnet.aws_default_subnet_2",
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc/3f86d8514f3bed4c",
            "certificate_arn": "arn:aws:acm:us-east-2:366187108546:certificate/d2c0f434-ce30-4932-a59b-993d8d2848df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc/3f86d8514f3bed4c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-20220430230012214800000002/8f5c2e3af5c527bc",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_12",
            "aws_default_subnet.aws_default_subnet_2",
            "aws_default_vpc.aws_default_vpc_1",
            "aws_lb.alb_9",
            "aws_lb_target_group.aws_lb_target_group_11",
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73",
            "arn_suffix": "targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220430230011574000000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c677fead"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "aws_lb_target_group_attachment_14",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73-20220430230025013300000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-20220430230011574000000001/c85f5e50a490bd73",
            "target_id": "i-024fe66e539039fb1"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1",
            "aws_instance.m5_6",
            "aws_lb_target_group.aws_lb_target_group_11",
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-077e958664b777164",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077e958664b777164",
            "ingress": [],
            "name": "terraform-20220430215807100900000001",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "tags_all": {
              "archUUID": "27e3a626-c4ac-45d4-ba51-465591a24fa0",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule-17a03100",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2506237947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077e958664b777164",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_15",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3637785431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077e958664b777164",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1151759535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077e958664b777164",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1151435688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077e958664b777164",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_3"
          ]
        }
      ]
    }
  ]
}